# mri_radiomics_toolkit

./: .gitattributes  .gitignore  .gitmodules  BBRENT.md  README.md  cv_grid_search.py  feature_selection.py  model_building.py  pyradiomics_setting.yml  requirements.txt  run_feature_selection.py  run_model_building.py  run_pyradiomics.py  setup.cfg  setup.py  visualization.py
experiments/: 01_feature_selection_stability.py  02_pipeline_performance.py  03_building_final_model.py
experiments/01_configs/: C1_elastic_net_only.yml  C2_RENT.yml  C3_BBRENT.yml  C4_BoostingRENT.yml  C5_BaggingRENT.yml
experiments/02_configs/: BRENT.yml  pyrad_settings.yml
mri_radiomics_toolkit/: __init__.py  controller.py  cv_grid_search.py  data_split.py  feature_extractor.py  feature_selection.py  intra_class_corr.py  model_building.py  perf_metric.py  utils.py
mri_radiomics_toolkit/assets/t2wfs/: 3_NyulNormalizer.npz  norm_graph.yml
mri_radiomics_toolkit/feature_selection/: __init__.py  base.py  bbrent.py  bootstrapped_selection.py  cox_selection.py  icc_filter.py  normalization.py  sklearn_compat.py  statistical_filter.py  supervised_selection.py  variance_filter.py
mri_radiomics_toolkit/models/: cards.py
npc_radiomics/: __init__.py  controller.py  cv_grid_search.py  feature_extractor.py  feature_selection.py  intra_class_corr.py  model_building.py  perf_metric.py  run_pyradiomics.py
pyradiomics_setting/: pyradiomics_setting-v3.yml
samples/: fs_saved_state.fss  sample_controller_settings.yml  sample_selected_feat_2.xlsx  sample_setting.yml
scripts/: run_pyradiomics.py  run_pyradiomics.sh
test/: Test_feature_extractor.py  Test_mri_radiomics.py  Test_npc_radiomics.py  test_data_split.py  test_feature_extractor.py  test_feature_selector.py  test_model_building.py  test_mri_radiomics.py  test_perf_metric.py  test_selector.py  test_utils.py
test/test_data/: test_pyrad_setting_1.yml
unit_test/: test_cox_selection.py  test_feature_extractor.py  test_feature_selector.py  test_model_building.py  test_mri_radiomics.py  test_perf_metric.py  test_utils.py
(+14 files in other folders)
