[metadata]
name             = mri-radiomics-toolkit
version          = 0.2.0
url              = ''
license          = MIT
author           = ML, Wong
author_email     = lun.m.wong@cuhk.edu.hk
description      = "Radiomics pipeline for MRI"
classifiers = Programming Language :: Python :: 3

[options]
include_package_data = False
packages = find:
install_requires =
    scikit-learn == 1.0.1
    scikit-image >= 0.19.2
    pyradiomics >= 3.0.1
    simpleitk >= 2.1.1
    scipy >= 1.7.1
    pandas >= 1.1.4
    pingouin >= 0.4.0
    tqdm >= 4.48.2
    mri-normalization-tools >= 0.1
    pandas
    seaborn
    RENT

[options.package_data]
* = *nii.gz


[options.packages.find]
exclude =
    assets*
    data*
    experiments*
    ThirdParty*
