[metadata]
name             = mri-radiomics-toolkit
version          = 0.2.0
url              = ''
license          = MIT
author           = ML, Wong
author_email     = lun.m.wong@cuhk.edu.hk
description      = "Radiomics pipeline for MRI"
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Data scientists
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
include_package_data = False
python_requires = >= 3.7, < 3.10
packages = find:
install_requires =
    scikit-learn >= 1.0.1
    scikit-image >= 0.19.2
    pyradiomics >= 3.0.1
    simpleitk >= 2.1.1
    scipy >= 1.7.1
    joblib
    pandas >= 1.1.4
    chardet >= 4.0.0
    pingouin >= 0.4.0
    tqdm >= 4.48.2
    mri-normalization-tools >= 0.1
    pandas
    seaborn
    openpyxl >= 3.0.0
    RENT >= 0.0.1

[options.extras_require]
torch_debs =
    torchio >= 0.18.84
    torch >= 1.1

[options.package_data]
* =
    *nii.gz
    pyradiomics_setting/*yml


[options.packages.find]
exclude =
    assets*
    data*
    experiments*
    ThirdParty*

[options.entry_points]
console_scripts =
    mradtk-extract-features = scripts.run_pyradiomics:main